Linting and spell check

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -11,13 +11,15 @@
 <div class="row">
     <div class="left">
         <h1>Full Stack Developer</h1>
-        <p>Hi! I am a Junior Developer based in Hertfordshire. <br><br> I have {{getExperience('May 1, 2019')}} years industry experience producing software, with a focus on Javascript web applications.</p>
+        <p>Hi! I am a Junior Developer based in Hertfordshire. <br><br> I have {{getExperience('May 1, 2019')}}
+          years industry experience producing software, with a focus on Javascript web applications.</p>
         <div class="links">
             <a class="downloadCV" href="/assets/brooklyn-pedley-cv.docx" download title="Download My CV">Download CV<i
                     class="fas fa-download"></i></a>
             <a class="downloadCV" href="https://www.github.com/brooklynP" target="_blank" title="Go To My Github">See My
                 Code<i class="fab fa-github"></i></a>
-            <a class="downloadCV" href="https://www.linkedin.com/in/brooklynpedley/" target="_blank" title="See My Linkedin"><i class="fab fa-linkedin small"></i></a>
+            <a class="downloadCV" href="https://www.linkedin.com/in/brooklynpedley/" target="_blank"
+               title="See My Linkedin"><i class="fab fa-linkedin small"></i></a>
         </div>
     </div>
     <div class="right">
@@ -31,7 +33,7 @@
         <div>
             <h4>The Frontend</h4>
             <p>I Use React to create my frontends. With experience using Ionic and Electron to create
-                cross-platform apps, aswell as previous experience in Angular</p>
+                cross-platform apps, as well as previous experience in Angular</p>
         </div>
         <div>
             <h4>The Backend</h4>
@@ -49,14 +51,14 @@
         </div>
         <div>
             <h4>Databases</h4>
-            <p>I currently Work with SQL in the Microsoft SQL Server enviroment. And have had previous exposure to Couchbase,
-                aswell as completing the MongoDB University course
+            <p>I currently Work with SQL in the Microsoft SQL Server environment. And have had previous exposure to Couchbase,
+                as well as completing the MongoDB University course
             </p>
         </div>
         <div>
             <h4>Platforms</h4>
             <p>I have worked with both Windows and Mac platforms to develop, And I am used to testing for a variety of
-                mobile and desktop enviroments
+                mobile and desktop environments
             </p>
         </div>
         <footer>
@@ -100,7 +102,7 @@
 <section id="other-experience">
     <h3>&lt; Other Experience &gt;</h3>
     <app-other-experience-tile setID="expTile1" [date]="createDate('February 1, 2020')"
-        experienceTitle="CertifactionInUIUX" [text]="['I have attained a BSC accredited certifaction in foundation user experience following a training
+        experienceTitle="CertificationInUIUX" [text]="['I have attained a BSC accredited certification in foundation user experience following a training
         course on the subject']"></app-other-experience-tile>
 
     <app-other-experience-tile setID="expTile2" [date]="createDate('November 1, 2016')"
@@ -181,7 +183,7 @@
                         - C Financial Studies
                     </li>
                     <li>
-                        - E Phyiscs
+                        - E Physics
                     </li>
                 </ul>
             </div>
