--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,15 +1,12 @@
+@import '../../../global.scss';
+
 header{
     display: flex;
     flex-direction: row;
     align-items: center;
-
     margin-bottom: 16px;
-
     width:100%;
-
-    background-color: #0B0B0D;
-
-    padding: 10px;
+    box-shadow: 0px 1px 5px 0 $shadow;
 
     h1{
         width: 300px;
@@ -20,60 +17,64 @@ header{
     }
 
     nav{
-        padding: 10px;
-        a{
-            text-decoration: none;
-            padding: inherit;
-            border:#4AF626 solid 2px;
-            margin-right: 8px;
+      display: flex;
+        button{
+          background: none;
+          border: none;
+          padding: 20px;
+          font-size: 16px;
+          color: $textPrimary
         }
 
-        a:hover{
-            background-color: #4AF626;
+      button.active{
+        background-color: $textPrimary;
+        color: #0B0B0D;
+      }
+
+        button:hover{
+            background-color: $textPrimary;
             color: #0B0B0D;
         }
     }
 }
 
 .sideMenu{
-    height: 100%;
+  display: none;
+  height: 100%;
     background-color: rgba(0,0,0,0.7);
     position: fixed;
     left: 0;
     top: 0;
-    padding: 10px;
 }
 
 .sideMenu nav{
     display: flex;
     flex-direction: column;
     margin-top: 16px;
-    padding: 0 32px;
-    padding-right: 128px;
+    padding: 0 128px 0 32px;
 }
 
 .sideMenu a {
     margin: 16px 0;
 }
 
-button{
-    background: none;
-    border: none;
+button.hamburgerBtn{
     display: none;
-}
+    margin: 10px;
+background: none;
+  border: none;
 
-.sideMenu{
-    display: none;
 }
 
 @media screen and (max-width: 1140px) {
-    nav{
+    header nav{
         display: none;
     }
     header{
         height: 32px;
+      padding: 10px 0px;
     }
-    button, .sideMenu{
+    button.hamburgerBtn, .sideMenu{
         display: block;
     }
 }
