--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,8 +1,10 @@
+@import '../../../global.scss';
+
 .downloadCV{
-	border: solid 2px #4AF626;
+	border: solid 2px $textPrimary;
+  color: $textPrimary;
 	padding: 8px;
 	text-decoration: none;
-	color: #4AF626;
 	margin-right: 8px;
 	i{
 		margin-left: 4px;
@@ -13,15 +15,13 @@
 	}
 }
 
-
-
 .links{
 	display: flex;
 }
 
 .downloadCV:hover{
-	background-color: #4AF626;
-	color: black;
+	background-color: $textPrimary;
+	color: $accent;
 }
 
 .row{
@@ -41,7 +41,7 @@ img{
 	margin-left: 8px;
 	height: 200px;
 	width: auto;
-	border: solid 2px #4AF626;
+	border: solid 2px $textPrimary;
 	border-radius: 3px;
 }
 
@@ -51,12 +51,11 @@ img{
 		flex-wrap: wrap;
 		justify-content: space-evenly;
 
-		border: solid 1px black;
-		box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+		border: solid 1px $accent;
+		box-shadow: 3px 3px 5px 0 $shadow;
 		border-radius: 4px;
-		padding: 8px;
-		padding-top: 16px;
-		margin: 16px 10px;
+    padding: 16px 8px 8px;
+    margin: 16px 10px;
 
 		div{
 			width: 240px;
@@ -78,15 +77,14 @@ img{
 
 .educationTile{
 	border: solid 1px black;
-	box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 3px 3px 5px 0 rgba(0,0,0,0.75);
 	border-radius: 4px;
 	padding: 16px;
 	margin: 16px 10px;
 
 	h4{
-		margin: 0;
-		margin-bottom: 16px;
-	}
+    margin: 0 0 16px;
+  }
 	p{
 		margin-bottom: 0;
 	}
@@ -121,7 +119,7 @@ ul{
 ul.cmdStyleList{
 	display: block;
 	margin-left: 16px;
-	border-left: solid 1.5px white;
+	border-left: solid 1.5px $textSecondary;
 	padding-top: 12px;
 
 	li{
@@ -131,7 +129,7 @@ ul.cmdStyleList{
 	li:before{
 		width: 10px;
 		height: 1px;
-		background-color: white;
+		background-color: $textSecondary;
 	}
 }
 
@@ -155,7 +153,7 @@ nav{
 		margin-right: 0;
 	}
 	span{
-		color: #4AF626;
+		color: $textPrimary;
 		margin: 0 8px;
 	}
 	p{
@@ -179,7 +177,6 @@ footer{
 
 @media screen and (max-width: 1140px) {
 	.row{
-		// max-width: 95vw;
 		flex-direction: column-reverse;
 	}
 	.left, .right{
