--- a/src/app/pages/projects-page/projects-page.component.scss
+++ b/src/app/pages/projects-page/projects-page.component.scss
@@ -1,3 +1,6 @@
+@import '../../../global.scss';
+
+
 .project-cards-container{
     display: flex;
     flex-direction: row;
@@ -18,7 +21,7 @@
     padding: 0;
     margin: 32px;
 
-    background-color: black;
+    background-color: #01111d;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -77,12 +80,12 @@
 }
 
 .filter-by-skills button:hover{
-    color: #4AF626;
+    color: $textPrimary;
 }
 
 .filter-by-skills button:disabled{
     color: black;
-    background-color: #4AF626;
+    background-color: #697098;
     cursor: default;
 }
 
