--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,6 @@
 $backgroundColour: #011627;
 $textPrimary: #addb67;
 $textSecondary: white;
-$accent: #7e57c2;
+$accent: #084d81;
 $shadow: rgba(0,0,0,0.75);
 $filterButton: white;
