--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -62,9 +62,9 @@
             </p>
         </div>
         <footer>
-            <img src="../../../assets/logos/angular.png"><img src="../../../assets/logos/react.png">
-            <img src="../../../assets/logos/node.png"><img src="../../../assets/logos/loopback.png">
-            <img src="../../../assets/logos/sql.png">
+            <img src="../../../assets/logos/angular.png" alt="Angular Logo"><img src="../../../assets/logos/react.png" alt="React Logo">
+            <img src="../../../assets/logos/node.png" alt="Node Logo"><img src="../../../assets/logos/loopback.png" alt="Loopback Logo">
+            <img src="../../../assets/logos/sql.png" alt="SQL Logo">
         </footer>
     </div>
 
@@ -73,16 +73,19 @@
 <div class="hr"></div>
 <section id="work-experience">
     <h3>&lt; Work Experience &gt;</h3>
+    <app-work-tile setID="workTileRight1" title="Full Stack Javascript Specialist" company="AlphaFirst"
+                 [startDate]="createDate('June 29, 2021')" [newPosition]="true" logoPath="../../../assets/logos/alphafirst.png"></app-work-tile>
+
     <app-work-tile setID="workTileRight1" title="Junior Developer" company="AlphaFirst"
-        [startDate]="createDate('September 1, 2020')" [duties]="['Producing bespoke software solutions',
-    'Creating backend APIS and databases',
-    'Designing and creating responsive frontends',
-    'Supporting clients and managing projects', 'Producing Wordpress and Shopify sites']" [techStack]="{
+        [startDate]="createDate('September 1, 2020')" [endDate]="createDate('June 29, 2021')" [duties]="['Producing bespoke software solutions',
+        'Creating backend APIS and databases',
+        'Designing and creating responsive frontends',
+        'Supporting clients and managing projects', 'Producing Wordpress and Shopify sites']" [techStack]="{
         Frontend: 'React',
         Backend: 'Node.JS and Loopback',
         Hosting: 'Microsoft IIS',
         Database: 'MSSQL'
-      }" logoPath="../../../assets/logos/alphafirst.png"></app-work-tile>
+      }"></app-work-tile>
 
     <app-work-tile setID="workTileRight2" title="Trainee Developer" company="Attend2IT"
         [startDate]="createDate('May 1, 2019')" [endDate]="createDate('September 1, 2020')" [duties]="['Producing bespoke apps and websites for the events industry',
