--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -14,8 +14,8 @@
         <p>Hi! I am a Junior Developer based in Hertfordshire. <br><br> I have {{getExperience('May 1, 2019')}}
           years industry experience producing software, with a focus on Javascript web applications.</p>
         <div class="links">
-            <a class="downloadCV" href="/assets/brooklyn-pedley-cv.docx" download title="Download My CV">Download CV<i
-                    class="fas fa-download"></i></a>
+            <a class="downloadCV" href="/about/cv" title="View My CV" target="_self">View CV<i
+                    class="far fa-file"></i></a>
             <a class="downloadCV" href="https://www.github.com/brooklynP" target="_blank" title="Go To My Github">See My
                 Code<i class="fab fa-github"></i></a>
             <a class="downloadCV" href="https://www.linkedin.com/in/brooklynpedley/" target="_blank"
