DRY fixes on css. Fixed bug with line numbering

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -27,9 +27,9 @@
     </div>
 </div>
 <div class="hr"></div>
-<section class="techStack" id="tech-stack">
+<section class="techStack " id="tech-stack">
     <h3>&lt; My Tech Stack &gt;</h3>
-    <div class="body">
+    <div class="body card">
         <div>
             <h4>The Frontend</h4>
             <p>I Use React to create my frontends. With experience using Ionic and Electron to create
@@ -76,7 +76,7 @@
     <app-work-tile setID="workTileRight1" title="Full Stack Javascript Specialist" company="AlphaFirst"
                  [startDate]="createDate('June 29, 2021')" [newPosition]="true" logoPath="../../../assets/logos/alphafirst.png"></app-work-tile>
 
-    <app-work-tile setID="workTileRight1" title="Junior Developer" company="AlphaFirst"
+    <app-work-tile setID="workTileRight2" title="Junior Developer" company="AlphaFirst"
         [startDate]="createDate('September 1, 2020')" [endDate]="createDate('June 29, 2021')" [duties]="['Producing bespoke software solutions',
         'Creating backend APIS and databases',
         'Designing and creating responsive frontends',
@@ -87,7 +87,7 @@
         Database: 'MSSQL'
       }"></app-work-tile>
 
-    <app-work-tile setID="workTileRight2" title="Trainee Developer" company="Attend2IT"
+    <app-work-tile setID="workTileRight3" title="Trainee Developer" company="Attend2IT"
         [startDate]="createDate('May 1, 2019')" [endDate]="createDate('September 1, 2020')" [duties]="['Producing bespoke apps and websites for the events industry',
     'Designing and creating responsive frontends',
     'Creating Wordpress websites with custom functionality',
@@ -126,7 +126,7 @@
 <div class="hr"></div>
 <section id="education">
     <h3>&lt; Education &gt;</h3>
-    <div class="educationTile">
+    <div class="educationTile card">
         <h4>Games Programming at the university of Gloucestershire > 2017-2019</h4>
         <div class="university">
             <div>
@@ -151,7 +151,7 @@
             </div>
         </div>
     </div>
-    <div class="educationTile">
+    <div class="educationTile card">
         <h4>The John Warner School > 2010 to 2017</h4>
         <div class="gradeLists">
             <div>
