DRY fixes on css.

--- a/src/app/components/other-experience-tile/other-experience-tile.component.html
+++ b/src/app/components/other-experience-tile/other-experience-tile.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="card">
         <div class="numbers">
                 <p *ngFor="let number of getArrayOfLines(); let i = index">{{i + 1}}</p>
         </div>
