--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -37,7 +37,8 @@
         </div>
         <div>
             <h4>The Backend</h4>
-            <p>I currently use Node.JS and Express to produce back-end REST APIs. I also Use loopback 3 and 4 to quickly scaffold API's</p>
+            <p>I currently use Node.JS and Express to produce back-end REST APIs. I also Use loopback 3 and 4 to
+              quickly scaffold API's</p>
         </div>
         <div>
             <h4>Source Control</h4>
@@ -51,8 +52,8 @@
         </div>
         <div>
             <h4>Databases</h4>
-            <p>I currently Work with SQL in the Microsoft SQL Server environment. And have had previous exposure to Couchbase,
-                as well as completing the MongoDB University course
+            <p>I currently Work with SQL in the Microsoft SQL Server environment. And have had previous exposure to
+              Couchbase, as well as completing the MongoDB University course
             </p>
         </div>
         <div>
@@ -62,8 +63,10 @@
             </p>
         </div>
         <footer>
-            <img src="../../../assets/logos/angular.png" alt="Angular Logo"><img src="../../../assets/logos/react.png" alt="React Logo">
-            <img src="../../../assets/logos/node.png" alt="Node Logo"><img src="../../../assets/logos/loopback.png" alt="Loopback Logo">
+            <img src="../../../assets/logos/angular.png" alt="Angular Logo"><img src="../../../assets/logos/react.png"
+                                                                                 alt="React Logo">
+            <img src="../../../assets/logos/node.png" alt="Node Logo"><img src="../../../assets/logos/loopback.png"
+                                                                           alt="Loopback Logo">
             <img src="../../../assets/logos/sql.png" alt="SQL Logo">
         </footer>
     </div>
@@ -74,10 +77,12 @@
 <section id="work-experience">
     <h3>&lt; Work Experience &gt;</h3>
     <app-work-tile setID="workTileRight1" title="Full Stack Javascript Specialist" company="AlphaFirst"
-                 [startDate]="createDate('June 29, 2021')" [newPosition]="true" logoPath="../../../assets/logos/alphafirst.png"></app-work-tile>
+                 [startDate]="createDate('June 29, 2021')" [newPosition]="true"
+                   logoPath="../../../assets/logos/alphafirst.png"></app-work-tile>
 
     <app-work-tile setID="workTileRight2" title="Junior Developer" company="AlphaFirst"
-        [startDate]="createDate('September 1, 2020')" [endDate]="createDate('June 29, 2021')" [duties]="['Producing bespoke software solutions',
+        [startDate]="createDate('September 1, 2020')" [endDate]="createDate('June 29, 2021')" [duties]="[
+        'Producing bespoke software solutions',
         'Creating backend APIS and databases',
         'Designing and creating responsive frontends',
         'Supporting clients and managing projects', 'Producing Wordpress and Shopify sites']" [techStack]="{
@@ -88,7 +93,8 @@
       }"></app-work-tile>
 
     <app-work-tile setID="workTileRight3" title="Trainee Developer" company="Attend2IT"
-        [startDate]="createDate('May 1, 2019')" [endDate]="createDate('September 1, 2020')" [duties]="['Producing bespoke apps and websites for the events industry',
+        [startDate]="createDate('May 1, 2019')" [endDate]="createDate('September 1, 2020')" [duties]="[
+        'Producing bespoke apps and websites for the events industry',
     'Designing and creating responsive frontends',
     'Creating Wordpress websites with custom functionality',
     'Developing apps to work multiple on formats',
@@ -105,21 +111,25 @@
 <section id="other-experience">
     <h3>&lt; Other Experience &gt;</h3>
     <app-other-experience-tile setID="expTile1" [date]="createDate('February 1, 2020')"
-        experienceTitle="CertificationInUIUX" [text]="['I have attained a BSC accredited certification in foundation user experience following a training
-        course on the subject']"></app-other-experience-tile>
+        experienceTitle="CertificationInUIUX" [text]="['I have attained a BSC accredited certification in foundation ' +
+         'user experience following a training course on the subject']"></app-other-experience-tile>
 
     <app-other-experience-tile setID="expTile2" [date]="createDate('November 1, 2016')"
-        experienceTitle="GoldMedalAtWorldSkillsShow" [text]="['Paired with an engineer I went to the world skills show at the NEC, to represent my school in undertaking a 48hr compeititon with teams from other schools and universities.',
-        'We had to create an autonomous robot capable of detecting RFID coloured tags on objects scattered around an arena and then move them to corresponding nets.',
-        'I had to quickly learn how to use C while my engineer developed the robot. Then within the 2 days I developed an AI that could patrol the arena and scan objects it came across.',
+        experienceTitle="GoldMedalAtWorldSkillsShow" [text]="['Paired with an engineer I went to the world skills show' +
+         'at the NEC, to represent my school in undertaking a 48hr competition with teams from other schools and ' +
+          'universities.',
+        'We had to create an autonomous robot capable of detecting RFID coloured tags on objects scattered around an ' +
+         'arena and then move them to corresponding nets.',
+        'I had to quickly learn how to use C while my engineer developed the robot. ' +
+         'Then within the 2 days I developed an AI that could patrol the arena and scan objects it came across.',
         'I take great pride in the fact I was able to win the gold medal in this competition!']">
     </app-other-experience-tile>
 
     <app-other-experience-tile setID="expTile3" [date]="createDate('May 1, 2015')"
-        experienceTitle="WorkExpAtHertsPoliceHQ" [text]="['I had the opportunity to attend a couple of weeks work experience at the Hertfordshire Police
-        HQ. Here I shadowed their IT team as well as the in house developers.
-        I learnt alot about repairing IT equipment as well as seeing hands on how software developers
-        worked in the industry.']"></app-other-experience-tile>
+        experienceTitle="WorkExpAtHertsPoliceHQ" [text]="['I had the opportunity to attend a couple of weeks work ' +
+         'experience at the Hertfordshire Police HQ. Here I shadowed their IT team as well as the in house developers.'+
+        'I learnt a lot about repairing IT equipment as well as seeing hands on how software developers' +
+        'worked in the industry.']"></app-other-experience-tile>
     <h3>&lt;/ Other Experience &gt;</h3>
 
 </section>
