--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,11 @@ button{
   box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
   border-radius: 4px;
 }
+
+body::-webkit-scrollbar {
+    width: 4px;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: $textPrimary;
+}
