--- a/src/app/pages/single-project-page/single-project-page.component.scss
+++ b/src/app/pages/single-project-page/single-project-page.component.scss
@@ -6,13 +6,14 @@ img{
 
 ul{
     list-style: none;
+    padding: 0;
 }
 
-li:before{
+ul.includeBullets li:before{
     content: "> ";
 }
 
-.pageContainer{
+article{
     width: 50%;
     margin: 16px auto;
 }
