--- a/src/app/pages/projects-page/projects-page.component.html
+++ b/src/app/pages/projects-page/projects-page.component.html
@@ -1,20 +1,75 @@
 <app-header></app-header>
 
-<p>Take a look at some of my work 👨‍💻</p>
+<div class="pageContainer">
+    <div class="left" [style.width]="showRightPanel === false ? '100%' : '50%'">
+        <p class="center">Take a look at some of my work 👨‍💻</p>
 
-<div class="filter-by-skills">
-    <button (click)="selectFilter('all')" [disabled]="getSelectedClass('all')">All</button>
-    <button *ngFor="let skill of skillsToFilterBy" (click)="selectFilter(skill)"
-        [disabled]="getSelectedClass(skill)">{{skill}}</button>
-</div>
-
-<div class="project-cards-container">
-    <div class="project-card" *ngFor="let project of projects; let i = index"
-        [style.backgroundImage]="'url('+project.screenshots[0]+')'">
-        <div (click)="selectProject(project.index)" class="project-card-title-container">
-            <h1 class="project-card-title">
-                {{project.name}}
-            </h1>
+        <div class="filter-by-skills">
+            <button (click)="selectFilter('all')" [disabled]="getSelectedClass('all')">All</button>
+            <button *ngFor="let skill of skillsToFilterBy" (click)="selectFilter(skill)"
+                [disabled]="getSelectedClass(skill)">{{skill}}</button>
         </div>
+
+        <div class="project-cards-container">
+            <div class="project-card selected" *ngIf="showRightPanel"
+                [style.backgroundImage]="'url('+selectedProject.screenshots[0]+')'" [style.width]="'600px'" [style.height]="'300px'">
+                <div (click)="deselectProject()" class="project-card-title-container">
+                    <h1 class="project-card-title">
+                        {{selectedProject.name}}
+                    </h1>
+                </div>
+            </div>
+            <div class="project-card" *ngFor="let project of projects; let i = index"
+                [style.display]="showRightPanel && project.name === selectedProject.name ? 'none' : 'block'"
+                [style.backgroundImage]="'url('+project.screenshots[0]+')'" [style.width]="showRightPanel === false ? '300px' : '600px'" [style.height]="showRightPanel === false ? '150px' : '300px'">
+                <div (click)="selectProject(i)" class="project-card-title-container">
+                    <h1 class="project-card-title">
+                        {{project.name}}
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="right" [style.left]="showRightPanel === false ? '100%' : '50%'">
+        <article class="card">
+            <header>
+                <h1>{{selectedProject.name}}</h1>
+                <p class="center">{{selectedProject.summary}}</p>
+                <button (click)="deselectProject()" class="deselectButton"> x </button>
+            </header>
+        
+            <figure>
+                <img src="{{selectedProject.screenshots[currentScreenshot]}}" alt="Screenshot of project" class="selectedProjectImage">
+                <div class="imgControls" *ngIf="selectedProject.screenshots.length > 1">
+                    <button (click)="previousScreenshot()"> < </button>
+                    <div (click) ="selectScreenshot(i)" class="selector" *ngFor="let image of selectedProject.screenshots; let i = index" [style.backgroundColor]="i === currentScreenshot ? '#4AF626' : 'black'"></div>
+                    <button (click)="nextScreenshot()"> > </button>
+                </div>
+            </figure>
+        
+            <section>
+                <h2>About This Project</h2>
+                <p [innerText]="selectedProject.desc"></p>
+            </section>
+        
+            <section>
+                <h2>Tech And Skills</h2>
+                <ul class="includeBullets">
+                    <li *ngFor="let skill of selectedProject.skills">{{skill}}</li>
+                </ul>
+            </section>
+        
+            <section>
+                <h2 *ngIf="selectedProject.link || selectedProject.githubLink">Resources</h2>
+                <ul>
+                    <li>
+                        <a *ngIf="selectedProject.link" href="{{selectedProject.link}}" title="This Project's Website">View Project Live <i class="fas fa-link"></i></a>
+                    </li>
+                    <li>
+                        <a *ngIf="selectedProject.githubLink" href="{{selectedProject.githubLink}}" title="This Project's GitHub">View Project Code<i class="fab fa-github"></i></a>
+                    </li>
+                </ul>
+            </section>
+        </article>
     </div>
 </div>
