--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,6 +7,9 @@ header{
     margin-bottom: 16px;
     width:100%;
     box-shadow: 0px 1px 5px 0 $shadow;
+    position:sticky;
+    top:0;
+    background-color: $backgroundColour;
 
     h1{
         width: 300px;
