--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -27,41 +27,43 @@
     </figure>
 </section>
 <div class="hr"></div>
-<section class="techStack " id="tech-stack">
+<section class="techStack" id="tech-stack">
     <h3>&lt; My Tech Stack &gt;</h3>
-    <div class="body card">
-        <div>
+    <div class="row">
+        <div class="card fullWidth left">
             <h4>The Frontend</h4>
-            <p>I Use React to create my frontends. With experience using Ionic and Electron to create
-                cross-platform apps, as well as previous experience in Angular</p>
+            <p>I love to use React or Angular for my frontends with great experience in both. 
+                And have a lot of experience building server rendered front ends using Visual Basic .NET</p>
+            <p>I have implemented with many enterprise level third party APIs such as Microsoft Graph, Xero/Quickbooks, MalwareBytes and Keap.</p>
         </div>
-        <div>
+        <div class="card fullWidth right">
             <h4>The Backend</h4>
-            <p>I currently use Node.JS and Express to produce back-end REST APIs. I also Use loopback 3 and 4 to
-              quickly scaffold API's</p>
+            <p>I have experience building out large databases on Microsoft SQL Server, using T-SQL to create complex procedures and views.</p>
+            <p>When it comes to hosting I have a mix of experience between AWS, Azure and IIS.<br>
+                For AWS I am capable of using S3 and CloudFront to build scalable websites as well as API Gateway and Lambda to setup APIs</p>
+            <p>To Link it all together, I have developed APIs both directly in Express.JS and using Loopback to quickly scaffold APIs.</p>
         </div>
-        <div>
+    </div>
+    <div class="body card">
+        <!-- <div>
             <h4>Source Control</h4>
             <p>I like to use GitHub for my personal projects, and BitBucket for my work projects. I've also had some
                 experience with perforce</p>
-        </div>
+        </div> -->
         <div>
             <h4>Web Services</h4>
             <p>I have currently been using AWS for my web service needs. Using s3 and cloudfront to host my apps. And
                 API gateway and lambda to host some APIs</p>
         </div>
-        <div>
-            <h4>Databases</h4>
-            <p>I currently Work with SQL in the Microsoft SQL Server environment. And have had previous exposure to
-              Couchbase, as well as completing the MongoDB University course
-            </p>
-        </div>
-        <div>
+        <!-- <div>
+
+        </div> -->
+        <!-- <div>
             <h4>Platforms</h4>
             <p>I have worked with both Windows and Mac platforms to develop, And I am used to testing for a variety of
                 mobile and desktop environments
             </p>
-        </div>
+        </div> -->
         <footer>
             <img src="../../../assets/logos/angular.png" alt="Angular Logo">
             <img src="../../../assets/logos/react.png" alt="React Logo">
