--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -41,6 +41,14 @@ figure{
 	}
 }
 
+.fullWidth{
+	width: 46%;
+	padding: 16px 8px 8px;
+}
+.techStack .row{
+	justify-content: space-between;
+}
+
 img{
 	margin-left: 8px;
 	height: 200px;
@@ -53,12 +61,13 @@ img{
 	.body{
 		display: flex;
 		flex-wrap: wrap;
+		flex-direction: column;
 		justify-content: space-evenly;
-    padding: 16px 8px 8px;
-    margin: 16px 10px;
+    	padding: 16px 8px 8px;
+    	margin: 16px 10px;
 
 		div{
-			width: 240px;
+			width: 100%;
 			h4, p{
 				text-align: left;
 			}
